# llm-council-update

./: .env.example  .gitignore  ARCHITECTURE.md  BFF_IMPLEMENTATION.md  BUILD_COMPLETE.md  CHANGELOG.md  CONTRIBUTING.md  CREWAI_INTEGRATION.md  CREWAI_QUICKSTART.md  DIAGNOSTIC_REPORT.md  INTEGRATION_GUIDE.md  LICENSE  MOBILE_IMPLEMENTATION.md  NODEJS_UPDATE.md  OAUTH_SETUP.md  OPENROUTER_VERIFIED.md  PHASE1_IMPLEMENTATION.md  PORSCHE_UI_SPEC.md  PROMPT_1_FULL_AUDIT.md  PROMPT_2_SANITY_TEST.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  STAGE3_ANALYSIS.md  SUBAGENT_TEST_PROMPTS.md  TESTING.md  TREESHAKE_REPORT.md  UI_INTEGRITY_README.md  UI_INTEGRITY_SUMMARY.md  UI_QUICK_START.md  UPDATE_GUIDE.md  USAGE_GUIDE.md  add-to-path.ps1  demo.py  diagnose.ps1  global-tasks.json  inspect_stage3.py  install.ps1  install.sh  pyproject.toml  (+11 more)
.confucius/notes/ralph_session_1768267971/: summary.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: auth.py  config.py  core_prompts.py  crew_council.py  main.py  models.py  prompts.py  storage.py
backend/bff/: __init__.py  oauth.py  oauth_config.py  routes.py  session.py  session_store.py
config/: mcp.json
docs/: UI_INTEGRITY.md
examples/: integration_demo.py  ui_integrity_demo.py
frontend/: cypress.config.js  index.html  package-lock.json  package.json  tailwind.config.js  test-vite.ps1  vitest.config.js
frontend-bff/: README.md  index.html  package-lock.json  package.json
frontend-bff/src/: App.jsx  index.css
frontend/cypress/e2e/: conversations.cy.js
frontend/cypress/support/: commands.js  e2e.js
frontend/public/: test-theme.html
frontend/src/: App.jsx  api.js  auth.js  index.css
frontend/src/components/: ChatInterface.jsx  ConfirmModal.jsx  History.jsx  Login.css  Login.jsx  PromptHelper.jsx  Settings.jsx  Sidebar.jsx  Stage1.jsx  Stage2.jsx  Stage3.jsx  Toast.jsx  TopNav.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/test/: api.test.js  setup.js
mobile/: App.tsx  MIGRATION.md  README.md  SECURITY.md  STATUS.md  app.json  eas.json  package-lock.json  package.json
mobile/scripts/: promote-production.ps1  publish-update.ps1  release-preview.ps1  rollback.ps1
mobile/src/components/: ErrorBanner.tsx  MessageBubble.tsx  index.ts
mobile/src/constants/: config.ts  theme.ts
mobile/src/context/: AuthContext.tsx  ConversationContext.tsx
mobile/src/screens/: ChatScreen.tsx  LoginScreen.tsx
mobile/src/services/: api.ts  auth.ts  secureStore.ts
mobile/src/types/: index.ts
scripts/: import_prompt_pdf.py  launch_chrome.py  probe_pdf.py
src/confucius_agent/: __init__.py  cli.py  extensions.py  llm_clients.py  notes.py  orchestrator.py  ralph_integration.py  subagent_extension.py  ui_integrity.py
tests/: __init__.py  conftest.py  test_confucius.py  test_main.py  test_storage.py
vscode-extension/: package.json  tsconfig.json
vscode-extension/src/: extension.ts
